2006-03-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/python/graphobject.c (igraphmodule_Graph_Read_Ncol) :
	dummy update for predef argument
	
	* src/foreign.c (igraph_read_graph_ncol) : added predef argument

2006-03-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_fruchterman_reingold)
	(igraph_layout_fruchterman_reingold_3d, igraph_layout_kamada_kawai)
	(igraph_layout_kamada_kawai_3d, igraph_layout_merge_dla)
	(igraph_layout_grid_fruchterman_reingold) : progress handling
	updated or added

	* src/matrix.c (igraph_matrix_select_rows) : added
	* src/vector.c (igraph_vector_append) : added
	* src/other.c (igraph_convex_hull) : changed parameters
	* examples/simple/igraph_convex_hull.c : updated
	* interfaces/python/igraphmodule.c (igraphmodule_convex_hull): updated
	for new igraph_convex_hull syntax, returns a matrix if coords is true
	* interfaces/python/test.py : updated

	* src/structural_properties.c (igraph_get_all_shortest_paths) :
	bug hunted

2006-02-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/layout.c (igraph_layout_merge_dla) : add graph list parameter

	* src/layout.c (igraph_layout_merge_dla) : updated

	* src/operators.c (igraph_compose) : added
	* examples/simple/igraph_compose.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_complementer) : added
	* examples/simple/igraph_complementer.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_difference) : added
	* examples/simple/igraph_difference.c : added

2006-02-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_disjoint_union) : bug corrected
	* interfaces/python/graphobject.c (igraphmodule_Graph_union) :
	updated to refer to disjoint union

2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_union_many) : added
	(igraph_intersect) : make error check first
	(igraph_intersect) : removed memory leak